fix letter-spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,7 @@ body {
   font-family: Raleway;
   font-size: 26px;
   line-height: 1.19;
+  /* letter-spacing: 0.03em; */
 }
 
 .logo-web {
@@ -121,12 +122,14 @@ body {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
+  letter-spacing: 0.03em;
 }
 
 .feature-subtitle {
   color: var(--grey);
 
   line-height: 1.71;
+  letter-spacing: 0.03em;
 }
 
 .team-title {
@@ -134,6 +137,7 @@ body {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .team-description {
@@ -143,6 +147,7 @@ body {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 
 /* footer */
@@ -158,6 +163,7 @@ body {
   color: var(--primary-white-color);
 
   font-style: normal;
+  letter-spacing: 0.03em;
 }
 
 .footer .contacts-link {
@@ -165,6 +171,7 @@ body {
 
   font-weight: 400;
   font-style: normal;
+  letter-spacing: 0.03em;
 }
 
 .footer .contacts-link:hover,
@@ -190,6 +197,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
+  letter-spacing: 0.03em;
 }
 
 .filter-button {
@@ -202,6 +210,7 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
+  letter-spacing: 0.03em;
 
   cursor: pointer;
 }
